--- a/CampusCloudUniversityCampusSystem/src/main/resources/application.properties
+++ b/CampusCloudUniversityCampusSystem/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=CampusCloudUniversityCampusSystem
 
 # DataSource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/myDB?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/university?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=mayank@2446
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
