--- a/CampusCloudUniversityCampusSystem/src/main/resources/application.properties
+++ b/CampusCloudUniversityCampusSystem/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=CampusCloudUniversityCampusSystem
 # DataSource configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/university?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mayank@2446
+spring.datasource.password=Ankit@216
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate/JPA properties
