--- a/CampusCloudUniversityCampusSystem/src/main/resources/application.properties
+++ b/CampusCloudUniversityCampusSystem/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
+# File upload properties
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 firebase.config.path=classpath:firebase-service-account.json
